--- a/app/src/main/res/layout/gui_tempo_1.xml
+++ b/app/src/main/res/layout/gui_tempo_1.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="960px"
+    android:layout_height="640px"
+    android:background="@color/black"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <pl.droidsonroids.gif.GifImageView
-        android:id="@+id/image"
-        android:background="@drawable/tempo1"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-         app:loopCount= "1"
-        />
+<!--    <pl.droidsonroids.gif.GifImageView-->
+<!--        android:id="@+id/image"-->
+<!--        android:background="@drawable/tempo1"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--         app:loopCount= "1"-->
+<!--        />-->
     <View
         android:layout_width="519px"
         android:layout_height="519px"
@@ -17,6 +18,31 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        android:onClick="onStartNext"
+        />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="动画1"
+        android:textColor="@color/white"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="100px"
+        app:layout_constraintTop_toTopOf="parent"
+        android:textSize="42px"
+        android:tag="1000"
+        />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="动画2"
+        android:textColor="@color/white"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="200px"
+        app:layout_constraintTop_toTopOf="parent"
+        android:textSize="42px"
+        />
 
-        android:onClick="onStartNext" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
