--- a/app/src/main/res/layout/gui_tempo_1.xml
+++ b/app/src/main/res/layout/gui_tempo_1.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="960px"
     android:layout_height="640px"
-    android:background="@color/black"
+    android:id="@id/gui_root"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 <!--    <pl.droidsonroids.gif.GifImageView-->
 <!--        android:id="@+id/image"-->
@@ -11,6 +11,12 @@
 <!--        android:layout_height="match_parent"-->
 <!--         app:loopCount= "1"-->
 <!--        />-->
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@id/gui_cover"
+        android:background="@color/black"
+        />
     <View
         android:layout_width="519px"
         android:layout_height="519px"
