--- a/app/src/main/res/layout/gui_tempo_2.xml
+++ b/app/src/main/res/layout/gui_tempo_2.xml
@@ -3,12 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:onClick="onStartNext"
+    android:id="@id/gui_root"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <pl.droidsonroids.gif.GifImageView
-        android:id="@+id/image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/tempo2"
+        android:id="@id/gui_cover"
         />
     <View
         android:layout_width="519px"
