--- a/app/src/main/res/layout/gui_tempo_3.xml
+++ b/app/src/main/res/layout/gui_tempo_3.xml
@@ -2,12 +2,13 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@id/gui_root"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <pl.droidsonroids.gif.GifImageView
-        android:id="@+id/image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/tempo3"
+        android:id="@id/gui_cover"
         />
     <View
         android:layout_width="519px"
