--- a/guidelib/src/main/res/values/ids.xml
+++ b/guidelib/src/main/res/values/ids.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <item name="gui_cover" type="id"/>
+    <item name="gui_root" type="id"/>
 </resources>
